# macos-xbar-commands

./: .gitmodules  Cargo.toml  README.md  TODO.md  build.rs
macos-invert-natural-scrolling/: Cargo.toml
macos-invert-natural-scrolling/src/: main.rs
macos-resize-dock/: Cargo.toml  README.md
macos-toggle-dark-mode/: Cargo.toml  README.md
macos-toggle-dark-mode/src/: main.rs
macos-toggle-dock/: Cargo.toml  README.md
macos-toggle-dock/src/: main.rs  toggle-dock.sh
macos-toggle-natural-scrolling/: Cargo.toml  README.md  build.rs
src/: lib.rs
xbar-all-cmds/: Cargo.toml
